--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
 	<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 	<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
+	<script type="text/javascript" src="bower_components/a0-angular-storage/dist/angular-storage.min.js"></script>
 	<style type="text/css">
 		body {
 			padding-top: 70px;
+			background-color: lightblue;
+		}
+		h1 {
+			text-align: center;
+			color: red;
 		}
 	</style>
 </head>
