--- a/index.html
+++ b/index.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
 <html ng-app='TodoApp'>
 <head>
-	<title>Angular Todo</title>
+	<title>Angular Todo2</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 	<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
 	<script type="text/javascript" src="bower_components/a0-angular-storage/dist/angular-storage.min.js"></script>
-	<style type="text/css">
-		body {
-			padding-top: 70px;
-			background-color: lightblue;
-		}
-		h1 {
-			text-align: center;
-			color: red;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
