added Google Font Gochi Hand to all Body Text

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 	<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
 	<script type="text/javascript" src="bower_components/a0-angular-storage/dist/angular-storage.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Gochi+Hand">
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#/">Angular Todo</a>
+				<a class="navbar-brand" href="#/">Angular Todo2</a>
 			</div>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#/">Home</a></li>
