--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>                        
+      			</button>
 				<a class="navbar-brand" href="#/">Angular Todo2</a>
 			</div>
+			<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#/">Home</a></li>
 				<li><a href="#/todo">Todo</a></li>
@@ -31,6 +37,7 @@
 					</ul>
 				</li>
 			</ul>
+		</div>
 		</div>
 	</nav>
 	<div ng-view>
