angular bootstrap clash override

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
 	
 </head>
 <body>
+
+<style>
+  .horizontal-collapse {
+    height: 70px;
+  }
+  .navbar-collapse.in {
+    overflow-y: hidden;
+  }
+</style>
+
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
