--- a/index.html
+++ b/index.html
@@ -54,25 +54,28 @@
 		</div>
 		</div>
 	</nav>
+
 	<div ng-controller="CollapseDemoCtrl">
-	<p>Resize window to less than 768 pixels to display mobile menu toggle button.</p>
-	<nav class="navbar navbar-default" role="navigation">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="#">A menu</a>
-		</div>
-		<div class="collapse navbar-collapse" uib-collapse="isNavCollapsed">
-			<ul class="nav navbar-nav">
-				<li><a href="#/accounts/register">Link 1</a></li>
-				<li><a href="#/accounts/login">Link 2</a></li>
-			</ul>
-		</div>
-	</nav>
+	
+		<nav class="navbar navbar-default" role="navigation">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" ng-click="isNavCollapsed = !isNavCollapsed">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">A menu</a>
+			</div>
+			<div class="collapse navbar-collapse" uib-collapse="isNavCollapsed">
+				<ul class="nav navbar-nav">
+					<li><a href="#/accounts/register">Link 1</a></li>
+					<li><a href="#/accounts/login">Link 2</a></li>
+				</ul>
+			</div>
+		</nav>
+	</div>
+
 	<div ng-view>
 		
 	</div>
