--- a/index.html
+++ b/index.html
@@ -27,39 +27,40 @@
     overflow-y: hidden;
   }
 </style>
-
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>                        
-      			</button>
-				<a class="navbar-brand" href="#/">Angular Todo2</a>
-			</div>
-			<div class="collapse navbar-collapse" id="myNavbar">
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#/">Home</a></li>
-				<li><a href="#/todo">Todo</a></li>
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Accounts <span class="caret"></span></a>
-					<ul class="dropdown-menu">
-						<li><a href="#/accounts/register">Register</a></li>
-						<li><a href="#/accounts/login">Login</a></li>
-						<li><a href="#/accounts/logout">Logout</a></li>
-					</ul>
-				</li>
-			</ul>
-		</div>
-		</div>
-	</nav>
-
 	<div ng-controller="CollapseDemoCtrl">
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" ng-click="isNavCollapsed = !isNavCollapsed" data-target="#myNavbar">
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>                        
+	      			</button>
+					<a class="navbar-brand" href="#/">Angular Todo2</a>
+				</div>
+				<div class="collapse navbar-collapse" uib-collapse="isNavCollapsed" id="myNavbar">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#/">Home</a></li>
+					<li><a href="#/todo">Todo</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Accounts <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="#/accounts/register">Register</a></li>
+							<li><a href="#/accounts/login">Login</a></li>
+							<li><a href="#/accounts/logout">Logout</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+			</div>
+		</nav>
+	</div>
+
+	<!-- <div ng-controller="CollapseDemoCtrl">
 	
 		<nav class="navbar navbar-default" role="navigation">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" ng-click="isNavCollapsed = !isNavCollapsed">
+				<button type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -74,7 +75,7 @@
 				</ul>
 			</div>
 		</nav>
-	</div>
+	</div> -->
 
 	<div ng-view>
 		
