--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" ng-click="isNavCollapsed = !isNavCollapsed" data-target="#myNavbar">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" ng-click="isNavCollapsed = !isNavCollapsed">
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>                        
 	      			</button>
 					<a class="navbar-brand" href="#/">Angular Todo2</a>
 				</div>
-				<div class="collapse navbar-collapse" uib-collapse="isNavCollapsed" id="myNavbar">
+				<div class="collapse navbar-collapse" uib-collapse="isNavCollapsed">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#/">Home</a></li>
 					<li><a href="#/todo">Todo</a></li>
@@ -60,7 +60,7 @@
 	
 		<nav class="navbar navbar-default" role="navigation">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed">
+				<button type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed">  data-target="#myNavbar"
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -68,7 +68,7 @@
 				</button>
 				<a class="navbar-brand" href="#">A menu</a>
 			</div>
-			<div class="collapse navbar-collapse" uib-collapse="isNavCollapsed">
+			<div class="collapse navbar-collapse" uib-collapse="isNavCollapsed">   id="myNavbar"
 				<ul class="nav navbar-nav">
 					<li><a href="#/accounts/register">Link 1</a></li>
 					<li><a href="#/accounts/login">Link 2</a></li>
