get menu to push page down instead of override

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 </head>
 <body>
 
-<style>
+<!-- <style>
   .horizontal-collapse {
     height: 70px;
   }
   .navbar-collapse.in {
     overflow-y: hidden;
   }
-</style>
+</style> -->
 	<div ng-controller="CollapseDemoCtrl">
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
@@ -54,7 +54,7 @@
 			</div>
 			</div>
 		</nav>
-	</div>
+	
 
 	<!-- <div ng-controller="CollapseDemoCtrl">
 	
@@ -80,6 +80,8 @@
 	<div ng-view>
 		
 	</div>
+</div>
+
 <script src='js/app.js'></script>
 <script src='js/controller.js'></script>
 <script src='js/service.js'></script>
