--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   }
 </style> -->
 	<div ng-controller="CollapseDemoCtrl">
-		<nav class="navbar navbar-inverse navbar-fixed-top">
+		<nav class="navbar navbar-inverse">
 			<div class="container">
 				<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" ng-click="isNavCollapsed = !isNavCollapsed">
