--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   }
 </style> -->
 	<div ng-controller="CollapseDemoCtrl">
-		<nav class="navbar navbar-inverse">
+		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" ng-click="isNavCollapsed = !isNavCollapsed">
@@ -56,7 +56,7 @@
 		</nav>
 	</div>
 
-	<div ng-controller="CollapseDemoCtrl">
+	<!-- <div ng-controller="CollapseDemoCtrl">
 	
 		<nav class="navbar navbar-default" role="navigation">
 			<div class="navbar-header">
@@ -75,7 +75,7 @@
 				</ul>
 			</div>
 		</nav>
-	</div>
+	</div> -->
 
 	<div ng-view>
 		
