--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     overflow-y: hidden;
   }
 </style> -->
-	<div ng-controller="CollapseDemoCtrl">
-		<nav class="navbar navbar-inverse navbar-fixed-top">
+	<div ng-controller="CollapseCtrl">
+		<nav class="navbar navbar-inverse">
 			<div class="container">
 				<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" ng-click="isNavCollapsed = !isNavCollapsed">
